        of Java classname. (kvisco - 20020115)

XML:    Added support in the Schema Object Model for 'union'. Union is not
        yet integrated with the source generator. (kvisco - 20011217) 
       
XML:	Refactored the handling of wildcard in the Schema Object Model and
        Source Generator (Arnaud)

XML:	Added support in the Schema Object Model for 'remove' methods (Arnaud)



Version 0.9.3.9, December 12, 2001
----------------------------------

XML:    Added support to the Schema Object Model for a number of XML Schema
        attributes / properties such as elementFormDefault, form, 
        attributeFormDefault, abstract, id...etc that were previously not
        read in from the XML Schema. Validation still needs to be updated,
        as well as the source code generator (kvisco - 20011129, 20011205)

XML:    Added support for the extremely powerful 'handler' attribute on
        the field element for the mapping (kvisco - 20011205)

XML:    Patch to XMLMappingLoader to fix dropped multiple id fields. This is a
        actually a patch to fix bugs which occur in MappingLoader and an errant
        implementation of ClassDescriptor (ClassDescriptorImpl). This fix should
        be moved once we have consensus from both JDO + XML teams (kvisco - 20011204).

XML:    Support for Identity-Constraints in the Schema Object Model and 
        SchemaWriter. Not yet supported in SourceGenerator (kvisco) 20011120

XML:    Applied Nathan Green's patch to allow "all" option when prompting
        to overwrite files during source code generation. (kvisco) 20011113

XML:    A number of improvements to SchemaWriter (kvisco) 20011112

XML:    Applied Glenn Nielsen's patch to allow double qoutes in default/fixed 
        schema values (kvisco) 20011111.

XML:    Fixed bug that prevented elements that reference each other to generate 
        classes. It removes the StackOverFlow Exception. (Arnaud)
